--- a/gb/21/10/26/n13331932.md
+++ b/gb/21/10/26/n13331932.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fjmocf3555/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fjmocf3555/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fjmocf3555/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yirpaj3429/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【中国观察】政治局人事、接班人和战争危机</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13157012-Forbidden-City-GettyImages-501955696-for-Selling-927-and-BW-686-1-600x400.jpg" />
 <h6></h6>
 <hr>
-	<p>【大纪元2021年10月27日讯】（大纪元记者宁海钟、骆亚报导）离可能召开的<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E4%BA%8C%E5%8D%81%E5%A4%A7.md#1">中共二十大</a>约有一年时间，地方人事牵动高层换届，<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>下届连任及其亲信的布局，中共的真实危机和<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E5%8F%B0%E6%B5%B7.md#1">台海</a>是否会发生战争，都是外界观察热点。两位资深中国问题专家<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E8%A2%81%E7%BA%A2%E5%86%B0.md#1">袁红冰</a>和寇健文在分别接受大纪元采访时发表了不同看法。</p>
-<h2><ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E9%99%88%E5%85%A8%E5%9B%BD.md#1">陈全国</a>要入常？</h2>
+	<p>【大纪元2021年10月27日讯】（大纪元记者宁海钟、骆亚报导）离可能召开的<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E4%BA%8C%E5%8D%81%E5%A4%A7.md#1">中共二十大</a>约有一年时间，地方人事牵动高层换届，<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>下届连任及其亲信的布局，中共的真实危机和<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E5%8F%B0%E6%B5%B7.md#1">台海</a>是否会发生战争，都是外界观察热点。两位资深中国问题专家<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E8%A2%81%E7%BA%A2%E5%86%B0.md#1">袁红冰</a>和寇健文在分别接受大纪元采访时发表了不同看法。</p>
+<h2><ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E9%99%88%E5%85%A8%E5%9B%BD.md#1">陈全国</a>要入常？</h2>
 <p>中共官方于10月19日公布了黑龙江、江苏、江西、湖南、广西、云南、西藏共7个省级地方省级书记的调动任命。此前的9月30日，安徽和山东省委书记也已变动。但按惯例进入政治局的四个直辖市和新疆、广东的一把手，自中共十九大以来从未变动。</p>
 <p>10月25日一则新疆的消息引起大纪元记者注意。</p>
-<p>据《新疆日报》报导，10月25日，中共新疆党代会“选举”产生新一届领导班子，<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E9%99%88%E5%85%A8%E5%9B%BD.md#1">陈全国</a>再次“当选”新疆自治区党委书记。</p>
+<p>据《新疆日报》报导，10月25日，中共新疆党代会“选举”产生新一届领导班子，<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E9%99%88%E5%85%A8%E5%9B%BD.md#1">陈全国</a>再次“当选”新疆自治区党委书记。</p>
 <p>2016年至2021年，陈全国已完成五年一届的任期。陈全国是中共现届（十九届）政治局委员。</p>
 <p>大纪元记者查证发现，当年作为地方大员从上海先后升入政治局常委会的俞正声和韩正，都在中共政治局换届的当年仍然连任上海市委书记。而陈全国的前任张春贤，在中共十九大召开前一年的2016年，则提前被免职，转任中央党的建设工作领导小组副组长。</p>
 <p>被指背景亲共的多维网26日发文称，1955年生的陈全国已年届66岁，此番留任，意味着还要升官。</p>
@@ -17,14 +17,14 @@
 <p>在主政西藏时就维稳手法强硬的陈全国，入疆以来，扩建集中营，关押上百万新疆人，并被指涉及酷刑和活摘器官等反人类罪行。此外，当局还在新疆强制消除少数民族文化，被指种族灭绝。</p>
 <figure id="attachment_12249548" aria-describedby="caption-attachment-12249548" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-863067852-600x400-1.jpg"><img class="size-large wp-image-12249548" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-863067852-600x400-1-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-12249548" class="wp-caption-text">美国国务院2020年7月9日宣布制裁四名中共官员，首次包括中国共产党中央政治局委员、新疆维吾尔自治区党委书记陈全国。(Etienne Oliveau/Getty Images)</figcaption></figure>
 <p>美国财政部2020年7月9日以涉及重大人权侵犯为由，将四名中共政府官员以及新疆公安厅列入制裁名单。被美国施行冻结资产制裁的分别是新疆党委书记陈全国丶前新疆政法委书记朱海仑丶新疆公安厅厅长王明山及前新疆公安厅党委书记霍留军。前面三人除了资产冻结外，也禁止入境美国。</p>
-<p>旅澳著名法学家<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E8%A2%81%E7%BA%A2%E5%86%B0.md#1">袁红冰</a>对大纪元分析认为，陈全国基本没有入常的可能性，之所以留任，就是因为他在新疆犯下了反人类罪行，受到了国际的制裁，中共需要留任他以示对抗这种制裁。</p>
-<p>袁红冰说：“中共为了表示他们对国际制裁的反制和强硬，所以他们让陈全国留任。另外一点就是陈全国的确是一个刽子手型的中共狗官，他用铁腕来统治新疆，<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>也比较放心。”</p>
+<p>旅澳著名法学家<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E8%A2%81%E7%BA%A2%E5%86%B0.md#1">袁红冰</a>对大纪元分析认为，陈全国基本没有入常的可能性，之所以留任，就是因为他在新疆犯下了反人类罪行，受到了国际的制裁，中共需要留任他以示对抗这种制裁。</p>
+<p>袁红冰说：“中共为了表示他们对国际制裁的反制和强硬，所以他们让陈全国留任。另外一点就是陈全国的确是一个刽子手型的中共狗官，他用铁腕来统治新疆，<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>也比较放心。”</p>
 <p>针对陈全国连任新疆自治区书记，台湾政治大学国关中心主任、东亚所特聘教授寇健文对大纪元表示，陈全国不算是原来习近平的那种所谓的旧部。且包括习近平的人，也不可能全部都入常，因为没有那么多名额。</p>
 <h2>政治局谁上谁下</h2>
 <p>中央政治局委员及政治局常委属国级领导人，过去一直流传其任职年龄参照所谓“七上八下”（新任年龄不得超过67周岁，68周岁以上不再提名）的潜规则。</p>
 <p>若按此说法，现任政治局25位成员，7名常委中，全国人大常委会委员长栗战书（1950年生）与国务院第一副总理韩正（1954年生），这两人明年过年龄线。其余18名中央政治局委员中，过线的是许其亮（1950年生）、王晨（1950年生）、刘鹤（1952年生）、孙春兰（1950年生）、杨洁篪（1950年生）、陈希（1953年生）、杨晓渡（1953年生）、张又侠（1950年生）、郭声琨（1954年生），共计9人。</p>
 <p>地方大员中目前属于政治局委员的，包括广东的李希（1956年生）、天津的李鸿忠（1956年生）、上海的李强（1959年生）、新疆的陈全国（1955年生）、重庆的陈敏尔（1960年生）、北京的蔡奇（1955年生）等6人，全部明年未过68岁。</p>
-<p>台湾政治大学国关中心主任、东亚所特聘教授寇健文认为，有关<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E4%BA%8C%E5%8D%81%E5%A4%A7.md#1">中共二十大</a>政治局人事，现在还比较难判断，“原因在于，原来67、68岁划线的这个年龄规矩，会不会放宽？因为一放宽之后，有些政治局常委就不用退了。如果位置没空出来，要进去的人的机会就会变少。”</p>
+<p>台湾政治大学国关中心主任、东亚所特聘教授寇健文认为，有关<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E4%BA%8C%E5%8D%81%E5%A4%A7.md#1">中共二十大</a>政治局人事，现在还比较难判断，“原因在于，原来67、68岁划线的这个年龄规矩，会不会放宽？因为一放宽之后，有些政治局常委就不用退了。如果位置没空出来，要进去的人的机会就会变少。”</p>
 <p>他认为年纪比较大的政治局常委会退，比如栗战书。但是空出来的名额还是比较有限。</p>
 <p>“要看现任的常委会退出几个人。那新一届的政治局常委是5个人、7个人，还是9个人？最后才能够决定扣除多少名额，可以让政治局委员上去。”</p>
 <p>寇健文认为这些联动都会影响到习近平的人马布局，最后“变成习近平的亲信之间，彼此也会有一种间隔的关系存在了”。</p>
@@ -51,7 +51,7 @@
 <p>“这个体制建立起来之后，（习）总有一天会衰老，那后面的人能不能接得下来这个权力高度集中的体制，如何让它有效地运营，这对中共来讲是一个大的挑战。”</p>
 <p>袁红冰认为，现在当局主要是靠着中纪委和国家监察委这个超级的锦衣卫把中共的官场，用一种国家恐怖主义的暴力给控制起来，用一种高科技的特务统治把它控制起来。</p>
 <p>“它最大的问题，内部的最大矛盾是两个：第一个就是政治层面，中共的千万官员，实际上都对习近平充满了怨恨。第二个大的危机就是习近平周围的这群人，根本就没有能力把中国的经济搞好。从中国内部得到的情况来看，中国的经济现在是急速地下滑。”</p>
-<h2>中共政权崩溃与<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E5%8F%B0%E6%B5%B7.md#1">台海</a>之战有关？</h2>
+<h2>中共政权崩溃与<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E5%8F%B0%E6%B5%B7.md#1">台海</a>之战有关？</h2>
 <p>中共最近频频对台湾文攻武吓，并不断强调备战打仗。新华社最新报导，中央军委主席习近平对于10月25日至26日召开的全军装备工作会议上指示，要求加紧构建武器装备现代化管理体系。</p>
 <figure id="attachment_13242974" aria-describedby="caption-attachment-13242974" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/09/id13242974-2109160048042378.jpg"><img class="size-large wp-image-13242974" src="https://i.epochtimes.com/assets/uploads/2021/09/id13242974-2109160048042378-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13242974" class="wp-caption-text">台湾陆军9月16日上午于屏东枫港地区实施反舟波登陆演练，M110A2自走炮接获射击指令后对目标实施攻击。（中央社）</figcaption></figure>
 <p>袁红冰认为中共的政权崩溃恰恰与台海之战有关：“我一直在讲，现在外界根本就不懂当代的主要焦点在哪里？焦点就是在于台海战争。”</p>
@@ -69,41 +69,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/6/16/n13024944.md#1">分析：中共二十大常委的几种组合</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/7/23/n13110991.md#1">分析：即使习近平二十大后退位 也有一无解题</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/8/19/n13174330.md#1">王友群：中共二十大前习近平最担心的是军队</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/8/29/n13195124.md#1">【翻墙必看】分析：二十大汪洋不可能上位</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/6/16/n13024944.md#1">分析：中共二十大常委的几种组合</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/7/23/n13110991.md#1">分析：即使习近平二十大后退位 也有一无解题</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/8/19/n13174330.md#1">王友群：中共二十大前习近平最担心的是军队</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/8/29/n13195124.md#1">【翻墙必看】分析：二十大汪洋不可能上位</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/12/n9951023.md#1" target="_blank">林辉：周恩来如此对待两位救命恩人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/7/4/n3627160.md#1" target="_blank">心湖：中共是破坏道德的罪魁祸首</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/10/n11858311.md#1" target="_blank">王友群：习仲勋等支持气功研究的内幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11490640.md#1" target="_blank">来自摩尔多瓦的心声：道德是人类真正价值</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/16/n13379941.md#1">【百年真相】张高丽和江派官员淫乱秘闻</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/15/n13376505.md#1">【人生之钥】死前五天他翻转人生 官至一品寿高八十</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/18/n13384403.md#1">【未解之谜】寻找巨人的真相</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/10/31/n13343096.md#1">故乡见闻：“真疯”</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/13/n13373689.md#1">“眉寿”是指几岁高寿？典故为何和春酒有关？</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/8/n13362266.md#1">【思想领袖】无声之手如何影响言论自由</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/20/n13387996.md#1">【十字路口】白宫小威呛北京 彭帅紧急求救？</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/20/n13387269.md#1">新世纪影视新片《寻狗》热映 内涵深入人心</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13386902.md#1">昆凌6岁女偷戴妈妈珠宝 周杰伦怕搞丢追着跑</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13387150.md#1">分析：彭帅事件为中共带来真正挑战和窘境</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13385054.md#1">中共拟惩处翻墙软件提供者 分析：翻墙封不住</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13386902.md#1">昆凌6岁女偷戴妈妈珠宝 周杰伦怕搞丢追着跑</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13387175.md#1">范丞丞新片首映 范冰冰当观众入场支持</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/22/n13390513.md#1">大S与汪小菲宣布离婚 未来共同扶养小孩</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13388773.md#1">徐若瑄平安出院返家 与儿子相拥合照晒幸福</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13389860.md#1">《少年》香港禁映 导演：影片是通往自由的窗口</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/20/n13388038.md#1">哈士奇犬习惯做鬼脸 逗主人开心</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/16/n13379868.md#1">这些地雷早餐少碰 会越吃越胖 怎样吃才健康？</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13388685.md#1">湖南大胃王太会吃 遭吃到饱餐厅封杀</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13388603.md#1">美国加州公路上满地都是钞票 民众停车捡拾</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/18/n13383432.md#1">一表看懂男性雄激素 衰老主要原因和它有关</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fjmocf3555/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fjmocf3555/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/26/n13331932.htm">【中国观察】政治局人事、接班人和战争危机</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/26/n13331932.htm">【中国观察】政治局人事、接班人和战争危机</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fjmocf3555/djy/blob/master/gb/21/10/26/n13331932.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fjmocf3555/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fjmocf3555/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fjmocf3555/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yirpaj3429/djy/blob/master/gb/21/10/26/n13331932.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
